# about_qt

./: .gitignore
CLion连接QT/: hello.md
picture_viewer/: CMakeLists.txt
picture_viewer/src/: My_Photo_Label.h  function.cpp  function.h  main.cpp  my_photo_Graphics.h  my_qrc.qrc
picture_viewer/src/some_function/: C_QPixmapItem.cpp  C_QPixmapItem.h  Item_Interface.cpp  Item_Interface.h  Pic_Thread.cpp  Pic_Thread.h  my_Qtreewidget.cpp  my_Qtreewidget.h  my_photo_Graphics.cpp  my_photo_Graphics.h
picture_viewer/src/ui/images/pic_2d/: 360驱动大师.lnk
picture_viewer/src/ui/ui_file/: Qtree_ui.h  Qtree_ui.ui
qt_5/boll/: CMakeLists.txt  main.cpp
qt_5/boll/src/: Collision.cpp  Collision.h  Object_category.cpp  Object_category.h
qt_6/boll/: CMakeLists.txt  main.cpp
qt_6/build-first-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
qt_6/build-first-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-c43af5343f547e1968c1.json  cmakeFiles-v1-081f90282d44a938e84e.json  codemodel-v2-11056b7ad9458ddc4a3e.json  directory-.-Debug-2f446648c5b7bae7384f.json  index-2023-06-01T12-34-25-0763.json  target-first-Debug-19649d246128c1ba2480.json  target-first_autogen-Debug-7238e25102dc15c5abb7.json  target-first_autogen_timestamp_deps-Debug-69a85a61181ebffeb1cc.json
qt_6/build-first-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
qt_6/build-first-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.DCA88346B434414A.idx  QLocale.D6E83385FEF598CD.idx  QTranslator.DDC19133A2912E2F.idx  __stddef_max_align_t.h.4F4EBE33050D4AF0.idx  _mingw.h.0B825C863A7B2568.idx  _mingw_mac.h.8313CC5280E70DCD.idx  _mingw_secapi.h.485B97890D0430E6.idx  _timeval.h.E10F76DED7A4F39E.idx  algorithm.24364798F063ED48.idx  alloc_traits.h.A33F9FA67D870E79.idx  allocated_ptr.h.B851384BAA9243C9.idx  allocator.h.ED6DFCDF4CD95231.idx  array.8C508D25A179E9FA.idx  assert.h.FB013C1E7E52F318.idx  assertions.h.A84A7E5BA92C557F.idx  atomic.A5439BDF289CB653.idx  atomic_base.h.B875C23A02B059B9.idx  auto_ptr.h.1514A889D63883DC.idx  basic_string.tcc.CB497313655A0667.idx  beta_function.tcc.A01E152C314737E9.idx  c++allocator.h.A60EC28D5667D8A9.idx  c++locale.h.1CAEADCDD834077A.idx  chrono.2791D2169943813C.idx  clocale.3D3DD5FEB8586FE3.idx  cmath.297A67F5343510CF.idx  concurrence.h.E8F90F286E780522.idx  corecrt_startup.h.77D619147758E9A4.idx  cpp_type_traits.h.779F75AE9D8A4DFE.idx  cpu_defines.h.853A91DAB8F22F54.idx  cstdio.653770B28130C7B4.idx  cstdlib.C128ABB5487780E7.idx  ctime.B81F4101155EAF3D.idx  ctype.h.6B85258EABE9A226.idx  cxxabi_forced.h.FA2CD8915A5291B1.idx  cxxabi_init_exception.h.3AA458EC0C58B0C9.idx  debug.h.9C2C1536C13F4681.idx  enable_special_members.h.9E582261187F3E19.idx  errno.h.41BF9530FF5527F4.idx  (+124 more)
qt_6/build-first-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/first_autogen/: deps
qt_6/build-first-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/first_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
qt_6/build-untitled-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
qt_6/build-untitled-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
qt_6/build-untitled-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/untitled_autogen/: deps
qt_6/build-untitled-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/untitled_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
qt_6/first/: CMakeLists.txt  first_zh_CN.ts  main.cpp
qt_6/hello_world/: CMakeLists.txt  main.cpp
qt_6/hello_world/src/: the_qrc.qrc
qt_6/hello_world/src/code/: QML_Reloader.cpp  QML_Reloader.h
qt_6/hello_world/src/qml/: My_item.qml  testqml_1.qml  testqml_2.qml  testqml_2.qml.autosave
qt_6/project_qml/: CMakeLists.txt  main.cpp
qt_6/qml_fitst_projiect/: CMakeLists.txt  main.cpp
qt_6/qml_fitst_projiect/image/: the_qrc.qrc
qt_6/qml_fitst_projiect/image/qml/: testqml_1.qml
qt_6/qml_fitst_projiect/src/: QML_Reloader.h
qt_6/untitled/: CMakeLists.txt
qt_exam/: CMakeLists.txt
qt_exam/QtExamples-master/: README.md
qt_exam/QtExamples-master/CustomQch/doxygen-qmi-style/: qmi.css
qt_exam/QtExamples-master/ExCRLF/: main.cpp
qt_exam/QtExamples-master/ExChangeSVGColor/: widget.cpp  widget.h
qt_exam/QtExamples-master/QtQTableWidgetEx/: ExQTableWidget.cpp
qt_exam/QtExamples-master/QtQTreeWidgetEx/: CMakeLists.txt  ExQTreeWidget.cpp  ExQTreeWidget.h  ExQTreeWidget.ui  main.cpp  resources.rcc
qt_exam/QtExamples-master/QtQcomboBoxEx/: ExQcomboBox.cpp
qt_exam/QtExamples-master/QtQlistWidgetEx/: ExQListWidget.cpp
qt_exam/QtExamples-master/Studio/: Studio.sln
qt_exam/QtExamples-master/Studio/DesignPatterns/: AbstractFactory.cpp  AbstractFactory.h  DesignPatterns.cpp  DesignPatterns.vcxproj  DesignPatterns.vcxproj.filters  FactoryMethod.cpp  FactoryMethod.h  Observer.h  Singleton.cpp  Singleton.h
qt_exam/QtExamples-master/Studio/Studio/: BinarySearch.cpp  BinarySearch.h  MemoryAlignment.h  SharedPtr.h  SpecialMembers.cpp  SpecialMembers.h  Studio.cpp  Studio.vcxproj  Studio.vcxproj.filters  UniquePtr.cpp  UniquePtr.h
qt_exam/src/: beautification.cpp  beautification.h  function.cpp  function.h  main.cpp  myfirst.h  myfirst.ui  myhtml.html
qt_exam/src/ui/: QSlider_color_ui.h  QSlider_color_ui.ui  Qstring_Interface_switching_ui.h  Qstring_Interface_switching_ui.ui  Qtree_ui.h  Qtree_ui.ui  label_list_ui.h  label_list_ui.ui  my_qrc.qrc  my_qrc.rcc  myfirst_ui.h  myfirst_ui.ui
qt_exam/src/ui/cpp_class_function/: My_Photo_Label.cpp  My_Photo_Label.h
qt_exam/src/ui/exmui/ExQlistwidget/: ExQListWidget.ui
qt_exam/src/ui/ui_file/: QSlider_color_ui.h  QSlider_color_ui.ui  Qtree_ui.h  Qtree_ui.ui  myfirst_ui.h  myresource.rcc
qt_test/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  Item_Interface.cpp  Item_Interface.h  Item_Interface_Queue.cpp  Item_Interface_Queue.h  main.cpp  main.qmlc  mygraphicsview.cpp  mygraphicsview.h  treadqt.cpp  treadqt.h
untitled/: CMakeLists.txt  main.cpp  untitled_zh_CN.ts
(+180 files in other folders)
