cmake_minimum_required(VERSION 3.16)# 设置变量PROJECT_ROOT_DIR为项目根目录路径get_filename_component(PROJECT_ROOT_DIR ${CMAKE_SOURCE_DIR} ABSOLUTE)set(CMAKE_PREFIX_PATH "F:\\QT6\\6.2.4\\mingw_64")project(first VERSION 1.0.0)# 查找 Qt 6 的库find_package(Qt6 COMPONENTS Widgets REQUIRED)# 添加可执行文件add_executable(first main.cpp mainwindow.ui)# 链接 Qt 6 库target_link_libraries(first PRIVATE Qt6::Widgets)